2008-10-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8636: Hardcoded labels in Configuration module (thanks to Christopher Stelmaszyk)
	* Fixed bug #8505: String "File/Files" in Fileadmin are hardcoded (thanks to Stefano Kowalke)

2008-10-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #5019: htmlArea RTE hangs while editing link in Firefox

2008-10-21  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9553: Form validation script jsfunc.validateform.js sometimes fails in IE (thanks to Vladimir Podkovanov)
	* Fixed bug #9608: Frontend Editing does not work anymore

2008-10-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual

2008-10-20  Ingo Renner  <ingo@typo3.org>

	* Added feature 9505: Make the caches in TYPO3 use the new caching framework

2008-10-20  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Removed GPLv3 release of extJS from typo3/contrib/extJS/
	* Cleanup: Fixed ChangeLog

2008-10-20  Michael Stucki  <michael@typo3.org>

	* Follow-up on feature #8899: Rename "options.fileTree.uploadFieldsInLinkBrowser" to "options.folderTree.uploadFieldsInLinkBrowser" (patch by Steffen Kamper)

2008-10-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9398: Labels in Module User Administration are hardcoded (thanks to Christopher Stelmaszyk)

2008-10-19  Ingo Renner  <ingo@typo3.org>

	* Fixed bug 8564: Result of t3lib_BEfunc::getProcessedValue is hardcoded and therefore cannot be translated, credits Christopher Stelmaszyk

2008-10-19  Michael Stucki  <michael@typo3.org>

	* Fixed bug #9535: Folder icons in filelist file tree don't get skinned anymore (patch by Francois Suter)
	* Fixed bug #9497: Edit in Rich Text Editor - Button does not work anymore in Web>Page (patch by Oliver Hader)

2008-10-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9480: Enhance debug information with SQL data (thanks to Francois Suter for the inspiration)
	* Cleanup: Converted spaces to tabs in t3lib/t3lib_db.php