@@ -1,3 +1,7 @@
+2008-10-23  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9613: htmlArea RTE uses JScodeLibArray to insert CSS
+
 2008-10-22  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #5019: htmlARea RTE hangs while editing link in Firefox
