@@ -1,3 +1,7 @@
+2008-10-23  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9613: htmlArea RTE uses JScodeLibArray to insert CSS
+
 2008-10-22  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Fixed bug #8636: Hardcoded labels in Configuration module (thanks to Christopher Stelmaszyk)
